@@ -1,379 +1,0 @@
-/**********************************************************************
-
-	--- Qt Architect generated file ---
-
-	File: ReceivePaymentData.cpp
-	Last generated: Tue Feb 22 16:05:42 2000
-
-	DO NOT EDIT!!!  This file will be automatically
-	regenerated by qtarch.  All changes will be lost.
-
- *********************************************************************/
-
-#include <qpixmap.h>
-#include <qlayout.h>
-#include "ReceivePaymentData.h"
-
-#include <qlabel.h>
-
-ReceivePaymentData::ReceivePaymentData(QWidget *parent, const char *name)
-                   : QDialog(parent, name, FALSE, 0)
-{
-    QLabel *qtarch_CustomerIDLabel = new QLabel(this, "CustomerIDLabel");
-    qtarch_CustomerIDLabel->setGeometry(5, 5, 70, 13);
-    qtarch_CustomerIDLabel->setMinimumSize(0, 0);
-    qtarch_CustomerIDLabel->setMaximumSize(32767, 32767);
-    qtarch_CustomerIDLabel->setFocusPolicy(QWidget::NoFocus);
-    qtarch_CustomerIDLabel->setBackgroundMode(QWidget::PaletteBackground);
-    qtarch_CustomerIDLabel->setFrameStyle( 0 );
-    qtarch_CustomerIDLabel->setLineWidth( 1 );
-    qtarch_CustomerIDLabel->setMidLineWidth( 0 );
-    qtarch_CustomerIDLabel->QFrame::setMargin( -1 );
-    qtarch_CustomerIDLabel->setText( "Customer ID:" );
-    qtarch_CustomerIDLabel->setAlignment( AlignRight|AlignVCenter|ExpandTabs );
-    qtarch_CustomerIDLabel->setMargin( -1 );
-
-    QLabel *qtarch_CustomerAddressLabel = new QLabel(this, "CustomerAddressLabel");
-    qtarch_CustomerAddressLabel->setGeometry(5, 41, 70, 22);
-    qtarch_CustomerAddressLabel->setMinimumSize(0, 0);
-    qtarch_CustomerAddressLabel->setMaximumSize(32767, 32767);
-    qtarch_CustomerAddressLabel->setFocusPolicy(QWidget::NoFocus);
-    qtarch_CustomerAddressLabel->setBackgroundMode(QWidget::PaletteBackground);
-    qtarch_CustomerAddressLabel->setFrameStyle( 0 );
-    qtarch_CustomerAddressLabel->setLineWidth( 1 );
-    qtarch_CustomerAddressLabel->setMidLineWidth( 0 );
-    qtarch_CustomerAddressLabel->QFrame::setMargin( -1 );
-    qtarch_CustomerAddressLabel->setText( "Address:" );
-    qtarch_CustomerAddressLabel->setAlignment( AlignRight|AlignVCenter|ExpandTabs );
-    qtarch_CustomerAddressLabel->setMargin( -1 );
-
-    QLabel *qtarch_CustomerPhoneLabel = new QLabel(this, "CustomerPhoneLabel");
-    qtarch_CustomerPhoneLabel->setGeometry(5, 95, 70, 13);
-    qtarch_CustomerPhoneLabel->setMinimumSize(0, 0);
-    qtarch_CustomerPhoneLabel->setMaximumSize(32767, 32767);
-    qtarch_CustomerPhoneLabel->setFocusPolicy(QWidget::NoFocus);
-    qtarch_CustomerPhoneLabel->setBackgroundMode(QWidget::PaletteBackground);
-    qtarch_CustomerPhoneLabel->setFrameStyle( 0 );
-    qtarch_CustomerPhoneLabel->setLineWidth( 1 );
-    qtarch_CustomerPhoneLabel->setMidLineWidth( 0 );
-    qtarch_CustomerPhoneLabel->QFrame::setMargin( -1 );
-    qtarch_CustomerPhoneLabel->setText( "Phone:" );
-    qtarch_CustomerPhoneLabel->setAlignment( AlignRight|AlignVCenter|ExpandTabs );
-    qtarch_CustomerPhoneLabel->setMargin( -1 );
-
-    QLabel *qtarch_BalanceLabel = new QLabel(this, "BalanceLabel");
-    qtarch_BalanceLabel->setGeometry(295, 23, 85, 13);
-    qtarch_BalanceLabel->setMinimumSize(0, 0);
-    qtarch_BalanceLabel->setMaximumSize(32767, 32767);
-    qtarch_BalanceLabel->setFocusPolicy(QWidget::NoFocus);
-    qtarch_BalanceLabel->setBackgroundMode(QWidget::PaletteBackground);
-    qtarch_BalanceLabel->setFrameStyle( 0 );
-    qtarch_BalanceLabel->setLineWidth( 1 );
-    qtarch_BalanceLabel->setMidLineWidth( 0 );
-    qtarch_BalanceLabel->QFrame::setMargin( -1 );
-    qtarch_BalanceLabel->setText( "Balance:" );
-    qtarch_BalanceLabel->setAlignment( AlignRight|AlignVCenter|ExpandTabs );
-    qtarch_BalanceLabel->setMargin( -1 );
-
-    QLabel *qtarch_AmountLabel = new QLabel(this, "AmountLabel");
-    qtarch_AmountLabel->setGeometry(295, 68, 85, 22);
-    qtarch_AmountLabel->setMinimumSize(0, 0);
-    qtarch_AmountLabel->setMaximumSize(32767, 32767);
-    qtarch_AmountLabel->setFocusPolicy(QWidget::NoFocus);
-    qtarch_AmountLabel->setBackgroundMode(QWidget::PaletteBackground);
-    qtarch_AmountLabel->setFrameStyle( 0 );
-    qtarch_AmountLabel->setLineWidth( 1 );
-    qtarch_AmountLabel->setMidLineWidth( 0 );
-    qtarch_AmountLabel->QFrame::setMargin( -1 );
-    qtarch_AmountLabel->setText( "Amount:" );
-    qtarch_AmountLabel->setAlignment( AlignRight|AlignVCenter|ExpandTabs );
-    qtarch_AmountLabel->setMargin( -1 );
-
-    QLabel *qtarch_CheckNumberLabel = new QLabel(this, "CheckNumberLabel");
-    qtarch_CheckNumberLabel->setGeometry(295, 41, 85, 22);
-    qtarch_CheckNumberLabel->setMinimumSize(0, 0);
-    qtarch_CheckNumberLabel->setMaximumSize(32767, 32767);
-    qtarch_CheckNumberLabel->setFocusPolicy(QWidget::NoFocus);
-    qtarch_CheckNumberLabel->setBackgroundMode(QWidget::PaletteBackground);
-    qtarch_CheckNumberLabel->setFrameStyle( 0 );
-    qtarch_CheckNumberLabel->setLineWidth( 1 );
-    qtarch_CheckNumberLabel->setMidLineWidth( 0 );
-    qtarch_CheckNumberLabel->QFrame::setMargin( -1 );
-    qtarch_CheckNumberLabel->setText( "Check Number:" );
-    qtarch_CheckNumberLabel->setAlignment( AlignRight|AlignVCenter|ExpandTabs );
-    qtarch_CheckNumberLabel->setMargin( -1 );
-
-    QLabel *qtarch_DateLabel = new QLabel(this, "DateLabel");
-    qtarch_DateLabel->setGeometry(295, 5, 85, 13);
-    qtarch_DateLabel->setMinimumSize(0, 0);
-    qtarch_DateLabel->setMaximumSize(32767, 32767);
-    qtarch_DateLabel->setFocusPolicy(QWidget::NoFocus);
-    qtarch_DateLabel->setBackgroundMode(QWidget::PaletteBackground);
-    qtarch_DateLabel->setFrameStyle( 0 );
-    qtarch_DateLabel->setLineWidth( 1 );
-    qtarch_DateLabel->setMidLineWidth( 0 );
-    qtarch_DateLabel->QFrame::setMargin( -1 );
-    qtarch_DateLabel->setText( "Date:" );
-    qtarch_DateLabel->setAlignment( AlignRight|AlignVCenter|ExpandTabs );
-    qtarch_DateLabel->setMargin( -1 );
-
-    QLabel *qtarch_CustomerNameLabel = new QLabel(this, "CustomerNameLabel");
-    qtarch_CustomerNameLabel->setGeometry(5, 23, 70, 13);
-    qtarch_CustomerNameLabel->setMinimumSize(0, 0);
-    qtarch_CustomerNameLabel->setMaximumSize(32767, 32767);
-    qtarch_CustomerNameLabel->setFocusPolicy(QWidget::NoFocus);
-    qtarch_CustomerNameLabel->setBackgroundMode(QWidget::PaletteBackground);
-    qtarch_CustomerNameLabel->setFrameStyle( 0 );
-    qtarch_CustomerNameLabel->setLineWidth( 1 );
-    qtarch_CustomerNameLabel->setMidLineWidth( 0 );
-    qtarch_CustomerNameLabel->QFrame::setMargin( -1 );
-    qtarch_CustomerNameLabel->setText( "Name:" );
-    qtarch_CustomerNameLabel->setAlignment( AlignRight|AlignVCenter|ExpandTabs );
-    qtarch_CustomerNameLabel->setMargin( -1 );
-
-    customerIDLabel = new QLabel(this, "CustomerID");
-    customerIDLabel->setGeometry(80, 5, 210, 13);
-    customerIDLabel->setMinimumSize(0, 0);
-    customerIDLabel->setMaximumSize(32767, 32767);
-    customerIDLabel->setFocusPolicy(QWidget::NoFocus);
-    customerIDLabel->setBackgroundMode(QWidget::PaletteBackground);
-    customerIDLabel->setFrameStyle( 0 );
-    customerIDLabel->setLineWidth( 1 );
-    customerIDLabel->setMidLineWidth( 0 );
-    customerIDLabel->QFrame::setMargin( -1 );
-    customerIDLabel->setText( "" );
-    customerIDLabel->setAlignment( AlignLeft|AlignVCenter|ExpandTabs );
-    customerIDLabel->setMargin( -1 );
-
-    customerNameLabel = new QLabel(this, "CustomerName");
-    customerNameLabel->setGeometry(80, 23, 210, 13);
-    customerNameLabel->setMinimumSize(0, 0);
-    customerNameLabel->setMaximumSize(32767, 32767);
-    customerNameLabel->setFocusPolicy(QWidget::NoFocus);
-    customerNameLabel->setBackgroundMode(QWidget::PaletteBackground);
-    customerNameLabel->setFrameStyle( 0 );
-    customerNameLabel->setLineWidth( 1 );
-    customerNameLabel->setMidLineWidth( 0 );
-    customerNameLabel->QFrame::setMargin( -1 );
-    customerNameLabel->setText( "" );
-    customerNameLabel->setAlignment( AlignLeft|AlignVCenter|ExpandTabs );
-    customerNameLabel->setMargin( -1 );
-
-    addressLabel1 = new QLabel(this, "CustomerAddress1");
-    addressLabel1->setGeometry(80, 41, 210, 22);
-    addressLabel1->setMinimumSize(0, 0);
-    addressLabel1->setMaximumSize(32767, 32767);
-    addressLabel1->setFocusPolicy(QWidget::NoFocus);
-    addressLabel1->setBackgroundMode(QWidget::PaletteBackground);
-    addressLabel1->setFrameStyle( 0 );
-    addressLabel1->setLineWidth( 1 );
-    addressLabel1->setMidLineWidth( 0 );
-    addressLabel1->QFrame::setMargin( -1 );
-    addressLabel1->setText( "" );
-    addressLabel1->setAlignment( AlignLeft|AlignVCenter|ExpandTabs );
-    addressLabel1->setMargin( -1 );
-
-    addressLabel2 = new QLabel(this, "CustomerAddress2");
-    addressLabel2->setGeometry(80, 68, 210, 22);
-    addressLabel2->setMinimumSize(0, 0);
-    addressLabel2->setMaximumSize(32767, 32767);
-    addressLabel2->setFocusPolicy(QWidget::NoFocus);
-    addressLabel2->setBackgroundMode(QWidget::PaletteBackground);
-    addressLabel2->setFrameStyle( 0 );
-    addressLabel2->setLineWidth( 1 );
-    addressLabel2->setMidLineWidth( 0 );
-    addressLabel2->QFrame::setMargin( -1 );
-    addressLabel2->setText( "" );
-    addressLabel2->setAlignment( AlignLeft|AlignVCenter|ExpandTabs );
-    addressLabel2->setMargin( -1 );
-
-    phoneLabel = new QLabel(this, "CustomerPhone");
-    phoneLabel->setGeometry(80, 95, 210, 13);
-    phoneLabel->setMinimumSize(0, 0);
-    phoneLabel->setMaximumSize(32767, 32767);
-    phoneLabel->setFocusPolicy(QWidget::NoFocus);
-    phoneLabel->setBackgroundMode(QWidget::PaletteBackground);
-    phoneLabel->setFrameStyle( 0 );
-    phoneLabel->setLineWidth( 1 );
-    phoneLabel->setMidLineWidth( 0 );
-    phoneLabel->QFrame::setMargin( -1 );
-    phoneLabel->setText( "" );
-    phoneLabel->setAlignment( AlignLeft|AlignVCenter|ExpandTabs );
-    phoneLabel->setMargin( -1 );
-
-    dateLabel = new QLabel(this, "Date");
-    dateLabel->setGeometry(385, 5, 210, 13);
-    dateLabel->setMinimumSize(0, 0);
-    dateLabel->setMaximumSize(32767, 32767);
-    dateLabel->setFocusPolicy(QWidget::NoFocus);
-    dateLabel->setBackgroundMode(QWidget::PaletteBackground);
-    dateLabel->setFrameStyle( 0 );
-    dateLabel->setLineWidth( 1 );
-    dateLabel->setMidLineWidth( 0 );
-    dateLabel->QFrame::setMargin( -1 );
-    dateLabel->setText( "" );
-    dateLabel->setAlignment( AlignLeft|AlignVCenter|ExpandTabs );
-    dateLabel->setMargin( -1 );
-
-    balanceLabel = new QLabel(this, "Balance");
-    balanceLabel->setGeometry(385, 23, 210, 13);
-    balanceLabel->setMinimumSize(0, 0);
-    balanceLabel->setMaximumSize(32767, 32767);
-    balanceLabel->setFocusPolicy(QWidget::NoFocus);
-    balanceLabel->setBackgroundMode(QWidget::PaletteBackground);
-    balanceLabel->setFrameStyle( 0 );
-    balanceLabel->setLineWidth( 1 );
-    balanceLabel->setMidLineWidth( 0 );
-    balanceLabel->QFrame::setMargin( -1 );
-    balanceLabel->setText( "" );
-    balanceLabel->setAlignment( AlignLeft|AlignVCenter|ExpandTabs );
-    balanceLabel->setMargin( -1 );
-
-    checkNumber = new QLineEdit(this, "CheckNumber");
-    checkNumber->setGeometry(385, 41, 210, 22);
-    checkNumber->setMinimumSize(0, 0);
-    checkNumber->setMaximumSize(32767, 32767);
-    checkNumber->setFocusPolicy(QWidget::StrongFocus);
-    checkNumber->setBackgroundMode(QWidget::PaletteBase);
-    checkNumber->setText( "" );
-    checkNumber->setMaxLength( 12 );
-    checkNumber->setFrame( QLineEdit::Normal );
-    checkNumber->setFrame( TRUE );
-    checkNumber->setAlignment( AlignLeft );
-
-    amount = new QLineEdit(this, "Amount");
-    amount->setGeometry(385, 68, 110, 22);
-    amount->setMinimumSize(0, 0);
-    amount->setMaximumSize(32767, 32767);
-    amount->setFocusPolicy(QWidget::StrongFocus);
-    amount->setBackgroundMode(QWidget::PaletteBase);
-    amount->setText( "" );
-    amount->setMaxLength( 12 );
-    amount->setFrame( QLineEdit::Normal );
-    amount->setFrame( TRUE );
-    amount->setAlignment( AlignLeft );
-
-    saveButton = new QPushButton(this, "SaveButton");
-    saveButton->setGeometry(455, 219, 62, 26);
-    saveButton->setMinimumSize(0, 0);
-    saveButton->setMaximumSize(32767, 32767);
-    saveButton->setFocusPolicy(QWidget::TabFocus);
-    saveButton->setBackgroundMode(QWidget::PaletteBackground);
-    saveButton->setText( "&Save" );
-    saveButton->setAutoRepeat( FALSE );
-    saveButton->setAutoResize( FALSE );
-    saveButton->setToggleButton( FALSE );
-    saveButton->setDefault( FALSE );
-    saveButton->setAutoDefault( FALSE );
-    saveButton->setIsMenuButton( FALSE );
-    connect(saveButton, SIGNAL(clicked()), SLOT(savePayment()));
-
-    cancelButton = new QPushButton(this, "CanelButton");
-    cancelButton->setGeometry(522, 219, 73, 26);
-    cancelButton->setMinimumSize(0, 0);
-    cancelButton->setMaximumSize(32767, 32767);
-    cancelButton->setFocusPolicy(QWidget::TabFocus);
-    cancelButton->setBackgroundMode(QWidget::PaletteBackground);
-    cancelButton->setText( "&Cancel" );
-    cancelButton->setAutoRepeat( FALSE );
-    cancelButton->setAutoResize( FALSE );
-    cancelButton->setToggleButton( FALSE );
-    cancelButton->setDefault( FALSE );
-    cancelButton->setAutoDefault( FALSE );
-    cancelButton->setIsMenuButton( FALSE );
-    connect(cancelButton, SIGNAL(clicked()), SLOT(cancelPressed()));
-
-    chargeList = new QListView(this, "ChargeList");
-    chargeList->setGeometry(5, 113, 590, 101);
-    chargeList->setMinimumSize(0, 0);
-    chargeList->setMaximumSize(32767, 32767);
-    chargeList->setFocusPolicy(QWidget::NoFocus);
-    chargeList->setBackgroundMode(QWidget::PaletteBackground);
-    chargeList->setFrameStyle( 17 );
-    chargeList->setLineWidth( 2 );
-    chargeList->setMidLineWidth( 0 );
-    chargeList->QFrame::setMargin( 0 );
-    chargeList->setResizePolicy( QScrollView::Manual );
-    chargeList->setVScrollBarMode( QScrollView::Auto );
-    chargeList->setHScrollBarMode( QScrollView::Auto );
-    chargeList->setTreeStepSize( 20 );
-    chargeList->setMultiSelection( FALSE );
-    chargeList->setAllColumnsShowFocus( TRUE );
-    chargeList->setItemMargin( 1 );
-    chargeList->setRootIsDecorated( FALSE );
-    chargeList->addColumn( "Date", -1 );
-    chargeList->setColumnWidthMode( 0, QListView::Maximum );
-    chargeList->setColumnAlignment( 0, 1 );
-    chargeList->addColumn( "Login ID", -1 );
-    chargeList->setColumnWidthMode( 1, QListView::Maximum );
-    chargeList->setColumnAlignment( 1, 1 );
-    chargeList->addColumn( "Description", -1 );
-    chargeList->setColumnWidthMode( 2, QListView::Maximum );
-    chargeList->setColumnAlignment( 2, 1 );
-    chargeList->addColumn( "Due Date", -1 );
-    chargeList->setColumnWidthMode( 3, QListView::Maximum );
-    chargeList->setColumnAlignment( 3, 1 );
-    chargeList->addColumn( "Charge", -1 );
-    chargeList->setColumnWidthMode( 4, QListView::Maximum );
-    chargeList->setColumnAlignment( 4, 2 );
-    chargeList->addColumn( "Paid", -1 );
-    chargeList->setColumnWidthMode( 5, QListView::Maximum );
-    chargeList->setColumnAlignment( 5, 2 );
-    chargeList->addColumn( "Total", -1 );
-    chargeList->setColumnWidthMode( 6, QListView::Maximum );
-    chargeList->setColumnAlignment( 6, 2 );
-
-	QBoxLayout* qtarch_layout_1 = new QBoxLayout( this, QBoxLayout::TopToBottom, 5, 5, NULL );
-	qtarch_layout_1->addStrut( 0 );
-	QGridLayout* qtarch_layout_1_1 = new QGridLayout( 5, 4, 5, NULL );
-	qtarch_layout_1->addLayout( qtarch_layout_1_1, 0 );
-	qtarch_layout_1_1->addColSpacing( 0, 5 );
-	qtarch_layout_1_1->setColStretch( 0, 0 );
-	qtarch_layout_1_1->addColSpacing( 1, 5 );
-	qtarch_layout_1_1->setColStretch( 1, 1 );
-	qtarch_layout_1_1->addColSpacing( 2, 5 );
-	qtarch_layout_1_1->setColStretch( 2, 0 );
-	qtarch_layout_1_1->addColSpacing( 3, 5 );
-	qtarch_layout_1_1->setColStretch( 3, 1 );
-	qtarch_layout_1_1->addRowSpacing( 0, 0 );
-	qtarch_layout_1_1->setRowStretch( 0, 1 );
-	qtarch_layout_1_1->addWidget( qtarch_CustomerIDLabel, 0, 0, 0 );
-	qtarch_layout_1_1->addWidget( customerIDLabel, 0, 1, 0 );
-	qtarch_layout_1_1->addWidget( qtarch_DateLabel, 0, 2, 0 );
-	qtarch_layout_1_1->addWidget( dateLabel, 0, 3, 0 );
-	qtarch_layout_1_1->addRowSpacing( 1, 0 );
-	qtarch_layout_1_1->setRowStretch( 1, 1 );
-	qtarch_layout_1_1->addWidget( qtarch_CustomerNameLabel, 1, 0, 0 );
-	qtarch_layout_1_1->addWidget( customerNameLabel, 1, 1, 0 );
-	qtarch_layout_1_1->addWidget( qtarch_BalanceLabel, 1, 2, 0 );
-	qtarch_layout_1_1->addWidget( balanceLabel, 1, 3, 0 );
-	qtarch_layout_1_1->addRowSpacing( 2, 0 );
-	qtarch_layout_1_1->setRowStretch( 2, 1 );
-	qtarch_layout_1_1->addWidget( qtarch_CustomerAddressLabel, 2, 0, 0 );
-	qtarch_layout_1_1->addWidget( addressLabel1, 2, 1, 0 );
-	qtarch_layout_1_1->addWidget( qtarch_CheckNumberLabel, 2, 2, 0 );
-	qtarch_layout_1_1->addWidget( checkNumber, 2, 3, 0 );
-	qtarch_layout_1_1->addRowSpacing( 3, 0 );
-	qtarch_layout_1_1->setRowStretch( 3, 1 );
-	qtarch_layout_1_1->addWidget( addressLabel2, 3, 1, 0 );
-	qtarch_layout_1_1->addWidget( qtarch_AmountLabel, 3, 2, 0 );
-	qtarch_layout_1_1->addWidget( amount, 3, 3, 1 );
-	qtarch_layout_1_1->addRowSpacing( 4, 0 );
-	qtarch_layout_1_1->setRowStretch( 4, 1 );
-	qtarch_layout_1_1->addWidget( qtarch_CustomerPhoneLabel, 4, 0, 0 );
-	qtarch_layout_1_1->addWidget( phoneLabel, 4, 1, 0 );
-	qtarch_layout_1->addWidget( chargeList, 1, 0 );
-	QBoxLayout* qtarch_layout_1_3 = new QBoxLayout( QBoxLayout::LeftToRight, 5, NULL );
-	qtarch_layout_1->addLayout( qtarch_layout_1_3, 0 );
-	qtarch_layout_1_3->addStrut( 0 );
-	qtarch_layout_1_3->addStretch( 1 );
-	qtarch_layout_1_3->addWidget( saveButton, 0, 0 );
-	qtarch_layout_1_3->addWidget( cancelButton, 0, 0 );
-    resize(600,250);
-    setMinimumSize(0, 0);
-    setMaximumSize(32767, 32767);
-}
-
-ReceivePaymentData::~ReceivePaymentData()
-{
-}
