@@ -1,53 +1,0 @@
-/**********************************************************************
-
-	--- Qt Architect generated file ---
-
-	File: ReceivePaymentData.h
-	Last generated: Tue Feb 22 16:05:42 2000
-
-	DO NOT EDIT!!!  This file will be automatically
-	regenerated by qtarch.  All changes will be lost.
-
- *********************************************************************/
-
-#ifndef ReceivePaymentData_included
-#define ReceivePaymentData_included
-
-#include <qdialog.h>
-#include <qlabel.h>
-#include <qlistview.h>
-#include <qpushbutton.h>
-#include <qlineedit.h>
-
-class ReceivePaymentData : public QDialog
-{
-    Q_OBJECT
-
-public:
-
-    ReceivePaymentData(QWidget *parent = NULL, const char *name = NULL);
-
-    virtual ~ReceivePaymentData();
-
-    protected slots:
-
-    virtual void cancelPressed() =0;
-    virtual void savePayment() =0;
-
-    protected:
-
-    QLabel *customerIDLabel;
-    QLabel *customerNameLabel;
-    QLabel *addressLabel1;
-    QLabel *addressLabel2;
-    QLabel *phoneLabel;
-    QLabel *dateLabel;
-    QLabel *balanceLabel;
-    QLineEdit *checkNumber;
-    QLineEdit *amount;
-    QPushButton *saveButton;
-    QPushButton *cancelButton;
-    QListView *chargeList;
-};
-
-#endif // ReceivePaymentData_included
